<resources>
    <string name="app_name">DTF</string>

    <string name="bottom_nav_news_list_title">Новости</string>
    <string name="bottom_nav_news_category_title">Категории</string>
    <string name="bottom_nav_profile_title">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_news_list">News!!!</string>
    <string name="nav_category">Category!!!</string>
    <string name="nav_profile">Profile!!!</string>
</resources>
