<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/news_list_fragment"
        android:icon="@drawable/ic_launcher_background"
        android:contentDescription="@string/bottom_nav_news_list_title"
        android:title="@string/bottom_nav_news_list_title"/>
    <item
        android:id="@+id/category_fragment"
        android:icon="@drawable/ic_launcher_background"
        android:contentDescription="@string/bottom_nav_news_category_title"
        android:title="@string/bottom_nav_news_category_title" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_launcher_background"
        android:contentDescription="@string/bottom_nav_profile_title"
        android:title="@string/bottom_nav_profile_title" />
</menu>